@@ -507,72 +507,6 @@ load_file (const gchar *filename)
   g_string_free (buffer, TRUE);
 }
 
-gboolean
-button_press_event_cb (GtkTreeView    *tree_view,
-		       GdkEventButton *event,
-		       GtkTreeModel   *model)
-{
-  if (event->type == GDK_2BUTTON_PRESS)
-    {
-      GtkTreePath *path = NULL;
-
-      gtk_tree_view_get_path_at_pos (tree_view,
-				     event->window,
-				     event->x,
-				     event->y,
-				     &path,
-                                     NULL,
-                                     NULL,
-				     NULL);
-
-      if (path)
-	{
-	  GtkTreeIter iter;
-	  gboolean italic;
-	  GDoDemoFunc func;
-	  GtkWidget *window;
-
-	  gtk_tree_model_get_iter (model, &iter, path);
-	  gtk_tree_model_get (GTK_TREE_MODEL (model),
-			      &iter,
-			      FUNC_COLUMN, &func,
-			      ITALIC_COLUMN, &italic,
-			      -1);
-
-	  if (func)
-	    {
-	      gtk_tree_store_set (GTK_TREE_STORE (model),
-				  &iter,
-				  ITALIC_COLUMN, !italic,
-				  -1);
-	      window = (func) ();
-	      if (window != NULL)
-		{
-		  CallbackData *cbdata;
-		  
-		  cbdata = g_new (CallbackData, 1);
-		  cbdata->model = model;
-		  cbdata->path = path;
-		  
-		  g_signal_connect (window, "destroy",
-				    G_CALLBACK (window_closed_cb), cbdata);
-		}
-	      else
-		{
-		  gtk_tree_path_free (path);
-		}
-	    }
-	  else
-	    gtk_tree_path_free (path);
-	}
-
-      g_signal_stop_emission_by_name (tree_view, "button_press_event");
-      return TRUE;
-    }
-  
-  return FALSE;
-}
-
 void
 row_activated_cb (GtkTreeView       *tree_view,
                   GtkTreePath       *path,
